# python-template

./: CHANGELOG.md  Containerfile  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  release.yml
app/: __init__.py  __main__.py  app.py
